# open-weather-map

./: README.md
OpenWeatherMap/: CMakeLists.txt
OpenWeatherMap/forms/: owmgui.ui
OpenWeatherMap/includes/: owmapi.h  owmgui.h
OpenWeatherMap/lists/: Carbon Monoxide Data.csv  Forecast Weather Data.csv
OpenWeatherMap/src/: main.cpp  owmapi.cpp  owmgui.cpp
